<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Goals.GoalsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_your_calorie_goals"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMinCalories"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/minimum_calories"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMinCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMaxCalories"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/maximum_calories"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tilMinCalories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMaxCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnPresets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/presets"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/tilMaxCalories"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnSetGoal"
            app:layout_constraintHorizontal_chainStyle="spread"/>

        <Button
            android:id="@+id/btnSetGoal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set_goal"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@id/btnPresets"
            app:layout_constraintStart_toEndOf="@id/btnPresets"
            app:layout_constraintEnd_toEndOf="parent"/>

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/btnPresets" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>